deployment/deployment.yaml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngg-deployment
  labels:
    app: ngg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngg
  template:
    metadata:
      labels:
        app: ngg
    spec:
      containers:
      - name: mlflow
        image: leostep/fastapi-mlflow:latest
        command: ["mlflow", "server", "--backend-store-uri", "sqlite:///mlflow.db", "--default-artifact-root", "./mlruns", "--host", "0.0.0.0", "--port", "5000"]
        ports:
        - containerPort: 5000
      - name: fastapi
        image: leostep/fastapi-mlflow:latest
        command: ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
