deployment/fastapi-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: ngg
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
