deployment/mlflow-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: ngg
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
