deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngg-service
spec:
  selector:
    app: ngg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
