deployment/ingress.yaml
#| filename: "deployment/ingress.yaml"
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngg-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: conditionned-graph-generation.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
